Fix T100850: Regression: Gpencil: crash on material color and other properties change.

rBcd49fee74114 forgot to add proper support for calls to `ntreeAddTree`
with a NULL Main (which should generate `NO_MAIN` ntrees).